external-crates/move/crates/move-compiler/tests/move_2024/matching/nested_bindings.exp
error[E13003]: feature is under active development
  ┌─ tests/move_2024/matching/nested_bindings.move:3:17
  │
3 │     public enum ABC<Q,R> has drop {
  │                 ^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
  ┌─ tests/move_2024/matching/nested_bindings.move:9:17
  │
9 │     public enum QEither<L,R> has drop {
  │                 ^^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

